# quarto_blog_test

./: README.md  _quarto.yml  about.qmd  environment.yml  index.qmd  pyproject.toml  references.bib  settings.ini
.github/workflows/: test.yaml
.ipynb_checkpoints/: environment-checkpoint.yml  references-checkpoint.bib  setup-checkpoint.py
SP_blog/: _modidx.py  test.py
SP_blog/.ipynb_checkpoints/: _modidx-checkpoint.py
_proc/: index.ipynb  nbdev.yml
_proc/_docs/: core.html  index.html  robots.txt  sitemap.xml
_site/: about.html  index.html  search.json
_site/posts/post-with-code/: index.html
_site/posts/welcome/: index.html
docs/: index.html  listings.json  references.html  search.json
docs/nbs/: index.html
docs/nbs/.ipynb_checkpoints/: 00_core-checkpoint.html
docs/posts/20220927_ChanceConstraintsIntro/: blog_post.html  cc_theory.html  index.html
docs/posts/20220928_github_actions/: index.html
docs/posts/20220929_citation/: index.html
docs/posts/20221004_buildingblog/: index.html
docs/posts/20221128_nbdev_comands/: index.html
nbs/: 010_dev.ipynb  011_dev_test.ipynb  sidebar.yml
nbs/.ipynb_checkpoints/: 010_dev-checkpoint.ipynb  index-checkpoint.ipynb
posts/20220927_ChanceConstraintsIntro/: blog_post.ipynb  cc_theory.ipynb  index.ipynb
posts/20220928_github_actions/: index.qmd
posts/20221004_buildingblog/: index.qmd
posts/20221128_nbdev_comands/: index.qmd
posts/20221129_citation/: index.qmd
posts/20221130_modeling_tips/: index.qmd
posts/20230109_blending_models/: 01_blending.ipynb
posts/jupyter/: index.ipynb
(+15 files in other folders)
